2009-08-25  Kevin Ryde  <user42@zip.com.au>

	* net/dig.el (dig): Add autoload cookie.

2009-08-25  Glenn Morris  <rgm@gnu.org>

	* format.el (format-alist): Doc fix.

	* play/bubbles.el (top-level): Don't require cl at run-time.

	* progmodes/verilog-mode.el (top-level): Don't require lucid (and hence
	run-time cl).

2009-08-24  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-mapcar*): Replacement for `mapcar*'
	from cl package.
	(gdb-table-add-row, gdb-table-string): Use `gdb-mapcar*'.

2009-08-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-alg.el (math-trig-rewrite)
	(math-hyperbolic-trig-rewrite): New functions.
	(calc-simplify): Simplify trig functions when asked.

2009-08-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-find-source-location): Avoid goto-line.

2009-08-24  Kenichi Handa  <handa@m17n.org>

	* language/ind-util.el (mapthread): Delete it.
	(combinatorial): New function.
	(indian--puthash-cv): Use combinatorial instead of mapthread.

2009-08-22  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-force-history-flag)
	(checkdoc-arguments-in-order-flag): Add safe-local-variable booleanp.
	(checkdoc-symbol-words): Add safe-local-variable for list of strings.
	Clarify docstring that the value is strings not symbols.
	(checkdoc-list-of-strings-p): New function.

2009-08-22  Glenn Morris  <rgm@gnu.org>

	* files.el (auto-mode-alist):
	* hippie-exp.el (he-concat-directory-file-name):
	* lpr.el (lpr-windows-system, printer-name):
	* ls-lisp.el (ls-lisp-emulation, ls-lisp-use-insert-directory-program):
	* ps-print.el (ps-windows-system):
	* startup.el (command-line):
	* emulation/viper-ex.el (viper-glob-function):
	* international/mule-cmds.el (set-language-environment-coding-systems):
	* net/ange-ftp.el (ange-ftp-write-region):
	* obsolete/fast-lock.el (fast-lock-cache-name):
	Remove code for defunct system-types emx, macos, mswindows, next-mach,
	unisoft-unix, vax-vms, win32, w32.
